--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,5 +1,5 @@
-<nav>
-    <a href="#" class="navbar-branch">Logo</a>
+<nav class="d-flex">
+    <a href="#" class="navbar-branch ">Logo</a>
     <ul class="nav-item">
         <a href="" class="nav-item">Home</a>
     </ul>
